testdata/009-invalid-yarn.stderr
error: unexpected end of YARN (line=2 col=21)
    VISIBLE "I Can Haz
                      ^
