testdata/009-invalid-yarn.lol
HAI 1.2
  VISIBLE "I Can Haz
KTHXBYE
